<resources>
    <string name="app_name">drGreenThumb</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="txt_entry_plant_name">"Plant Name"</string>
    <string name="action_utilities">"Utilities"</string>
    <string name="plant_info">"Plant Information"</string>
    <string name="action_find_supplies">"Find Supplies"</string>
    <string name="action_favorites_list">"Favorites List"</string>
    <string name="plant_name_title">"Plant Name"</string>
    <string name="plant_img_desc">"Image of Plant"</string>
    <string name="action_back">"Go Back"</string>
    <string name="action_add_to_favorites">Add to Favorites</string>
    <string name="action_purchase_plant">Purchase Plant</string>
    <string name="searching_for">"Searching For: ' '"</string>
    <string name="register_account">"Register"</string>
    <string name="pick_plant_type">Pick the Plant Type.</string>
    <string name="search">Search</string>
    <string name="title_activity_favorites_list">favoritesList</string>
</resources>
